--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -165,10 +165,6 @@ The real lever to pull is, therefore, $P(E|¬H)$.
 This probability tells us how likely it is that we find evidence when in fact, the theory is not true.
 Its counter probability $P(¬E|¬H)= 1 - P(E|¬H)$ is what we call "theoretical risk", because it is the risk a theory takes on in predicting the occurrence of particular evidence in its favour.
 
-```{r, include=FALSE}
-bayes <- function(h, eh, enh)(h * eh)/((h * eh) + ((1 - h) * enh))
-```
-
 Let us note some interesting properties of theoretical risk ($P(¬E|¬H)$).
 First, increasing theoretical risk leads to higher posterior probability ($P(H|E)$, our objective).
 Second, if the theoretical risk is smaller than detectability ($P(E|H)$) it follows that the posterior probability must decrease when observing the evidence.
@@ -179,6 +175,38 @@ In other words, observing a sure fact does not lend credence to a hypothesis.
 This sounds like a truism but is directly related to Popper's seminal criterion of demarcation.
 He stated that if it is impossible to prove a hypothesis false ($P(¬E|¬H) = 0$, theoretical risk is zero), it can not be considered a scientific hypothesis [@popperLogicScientificDiscovery2002, p. 18].
 We note these relations to underline that the Bayesian rational we apply here is able to reconstruct many commonly held views on riskiness and epistemic value.
+
+Both theorethical risk ($P(¬E|¬H)$) and detectability ($P(E|H)$) aggregate uncountable influences, otherwise they could not model the process of evidential support for theories.
+To make these concepts less abstract, consider the following illustrative example of a theory and different experiments that test it.
+Suppose the theory is about the cognitive phenomenon of "insight", and allow us to define it somewhat hand-waving as an cognitive abstraction that allows agents to consistently solve a well defined class of problems.
+We pose the hypothesis that the following problem belongs to such class of insight problems:
+
+> Use five matches (Ⅰ Ⅰ Ⅰ Ⅰ Ⅰ) to form the number eight. 
+
+We propose three experiments that differ in theoretical risk and detectability.
+All take a sample of ten psychology students and present them the problem for brief span of time.
+After that:
+
+1. the experimenter explains that with roman-numerals the problem is easy to solve; if all students come up with the solution, she records it as evidence for the hypothesis.
+2. the experimenter shows the solution "Ⅷ" and explains it; if all students come up with the solution, she records it as evidence for the hypothesis.
+3. the experimenter does nothing; if all students come up with the solution, she records it as evidence for the hypothesis.
+
+We argue that experiment 1 has high theoretical risk ($P(¬E_1|¬H)$) and high detectability ($P(E_1|H)$).
+If "insight" has nothing to do with solving the problem ($¬H$), than presenting the insight that roman literals might be used, should not lead to all students solving the problem ($¬E_1$); the experiment has therefore high theoretical risk ($P(¬E_1|¬H)$)
+Conversly, if insight is required to solve the problem ($H$), than it is probable to help all students to solve the problem ($E_1$); the experiment has therefore high detectability ($P(E_1|H)$).
+The experiment 2 on the other hand, has low theoretical risk ($P(¬E_2|¬H)$).
+Even if "insight" has nothing to do with solving the problem ($¬H$), there are other plausible reasons for observing the evidence ($E_2$), because the students can simply copy the solution, without any insight.
+With regard to detectability experiment 1 and 2 differ in no obvious way.
+Experiment 3, however, has low detectability.
+It is unlikely that all students come up with the correct solution in a short time ($E_3$), even if insight is required ($H$); the experiment 3 has therefore low detectability ($P(E_3|H)$).
+The theoretical risk, however, is also low in absolute terms but high compared to the theoretical risk.
+In the unlikely event that all 10 students lay the matches down in the form of the roman numeral Ⅷ ($E_3$) it is probably due to insight ($H$) and not by chance $P(¬E_2|¬H)$).
+Of course, it comes to mind to allow the evidence to be probabilistic, e.g., relax the requirement of "all students" to nine out of ten students, more than eight, and so forth.
+We discuss the relation between statistical methods and theoretical risk in the section [Statistical Methods]. 
+
+```{r, include=FALSE}
+bayes <- function(h, eh, enh)(h * eh)/((h * eh) + ((1 - h) * enh))
+```
 
 # Preregistration as a Means to Increase Theoretical Risk?
 
