--- a/references.bib
+++ b/references.bib
@@ -265,3 +265,16 @@
   doi = {10.31234/osf.io/xy2dk}
 }
 
+@article{shmueliExplainPredict2010,
+  title = {To {{Explain}} or to {{Predict}}?},
+  author = {Shmueli, Galit},
+  year = {2010},
+  month = aug,
+  journal = {Statistical Science},
+  volume = {25},
+  number = {3},
+  pages = {289--310},
+  publisher = {{Institute of Mathematical Statistics}},
+  issn = {0883-4237, 2168-8745},
+  doi = {10.1214/10-STS330}
+}
