--- a/references.bib
+++ b/references.bib
@@ -278,3 +278,18 @@
   issn = {0883-4237, 2168-8745},
   doi = {10.1214/10-STS330}
 }
+
+@article{kuklaClinicalStatisticalTheory1990,
+  title = {Clinical {{Versus Statistical Theory Appraisal}}},
+  author = {Kukla, Andre},
+  year = {1990},
+  month = apr,
+  journal = {Psychological Inquiry},
+  volume = {1},
+  number = {2},
+  pages = {160--161},
+  publisher = {{Routledge}},
+  issn = {1047-840X},
+  doi = {10.1207/s15327965pli0102_9},
+  annotation = {\_eprint: https://doi.org/10.1207/s15327965pli0102\_9}
+}
