graphics show theorethical risk instead of 𝑃(𝐸|¬𝐻) closes #22

--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -112,7 +112,7 @@ In fact, this conceptualization is purposefully reductionistic to be compatible 
 
 # Epistemic Value and Theoretical Risk
 
-Our first argument is that theorethical risk is crucial for judging theories.
+Our first argument is that theorethical risk is crucial for judging evidential support for theories.
 Put simply, risky predictions create persuasive evidence if they turn out to be correct.
 This point is crucial because we attribute much of the appeal of preregistration to this fact.
 
@@ -262,97 +262,77 @@ To illustrate the effect of uncertainty, let $p(E|H) = .8$ (e.g., power of 80%) 
 
 $$
 f(x)=\begin{cases}
-  \frac{1}{1 - \alpha} & \mathrm{for}\ \alpha \le x \le 1,\\
-  0 & \mathrm{for}\ x<\alpha\ \mathrm{or}\ x>1
+  \frac{1}{\tau} & \mathrm{for}\ 0 \le x \le \tau,\\
+  0 & \mathrm{for}\ x<0\ \mathrm{or}\ x>\tau
   \end{cases}
 $$
 
-Where $\alpha$ is, e.g., the statistical model's nominal type I error rate.
+Where $\tau{}$ is the upper bound of theoretical risk (e.g., .95 for a statistical model with a nominal type I error rate of 5%).
 
-We chose this uniform distribution to capture our statement that a statistical model only guarantees a lower bound to $p(E|\neg{}H)$ (and since its a probability the upper bound is 1) as it is the maximum entropy distribution under this assumption and conforms therefore with our Bayesian framework [@giffinUpdatingProbabilitiesData2007].
-
-```{r, include=FALSE, cache=TRUE}
-bayes <- function(h1, power, alpha, ...) {
-  (h1 * power) / (h1 * power + (1 - h1) * alpha)
-}
-uncertain_bayes <- function(h1, power, alpha, alpha_upper = 1, ...) {
-  mean(bayes(h1, power, runif(1e6, alpha, alpha_upper)))
-}
-
-step <- 0.01
-vary_alpha <-
-  tidyr::expand_grid(
-    h1 = .1,
-    power = .8,
-    alpha = seq(step, 1 - step, step)
-  ) %>% 
-  dplyr::mutate(.,
-    certain = purrr::pmap_dbl(., bayes),
-    uncertain = purrr::pmap_dbl(., uncertain_bayes)
-  )
-
-vary_alpha_long <- vary_alpha %>% 
-  pivot_longer(c(certain, uncertain),
-               names_to = "certainty",
-               values_to = "h2")
-```
-
-```{r, dev='tikz'}
-#| fig.cap: "Corroboration as firmness ($p(E|H)$) as a function of α, where α is either certain (solid line) or maximally uncertain (dotted line)."
-vary_alpha_long %>%
-  ggplot() +
-  geom_line(aes(alpha, h2, linetype = certainty)) +
-  lims(x = c(0, 1), y = 0:1) +
-  geom_ribbon(data = vary_alpha, aes(x = alpha, ymin = uncertain, ymax = certain), alpha = .1) +
-  labs(caption = "$p(E|H) = .8$, $p(H) = .1$",
-       y = "$\\mathbb{E}\\big(p(H|E)\\big)$",
-       x = "$\\alpha$") +
-  theme_tufte() +
-  theme(legend.position = c(.85, .8),
-        legend.title = element_blank())
-```
+We chose this uniform distribution to capture our statement that a statistical model only guarantees an upper bound to theorethical rsik (and since its a probability the lower bound is 0) as it is the maximum entropy distribution under this assumption and conforms therefore with our Bayesian framework [@giffinUpdatingProbabilitiesData2007].
 
 ```{r, include=FALSE}
-# h1 = prior
-# eh = p(E|H)
-# enh = p(E|\neg{}H)
+forbid_additional_args <- function(...)stopifnot(length(list(...)) == 0L)
 
-bayes <- function(h1, eh, enh, ...) {
-  (h1 * eh) / (h1 * eh + (1 - h1) * enh)
+#' Apply the Bayes Theorem
+#'
+#' @param h The prior probability of the hypothesis \eqn{P(H)}.
+#' @param detectability The probability of detecting evidence, if hypothesis holds \eqn{P(E|H)}.
+#' @param theoretical_risk The probability of not detecting evidence, if hypothesis does not hold \eqn{P(¬E|¬H)}.
+#' @param tau Same as `theoretical_risk` for compatibility.
+#' @return The posterior probability of the hypothesis after observing evidence \eqn{P(H|E)}.
+bayes <- function(h, detectability, theoretical_risk, ...) {
+  forbid_additional_args(...)
+  true_positive <- h * detectability
+  false_positive <- (1 - h) * (1 - theoretical_risk)
+  true_positive / (true_positive + false_positive)
 }
+
 # all formulas taken from Bayesian Philosophy of Science, p. 51
 # first letter = function name in Bayesian Philosophy of Science
 # optional letter = p for prime
 # second letter = m for measure
 measures <- list(
+  pm = list(
+    name = "Posterior",
+    formula = "\\frac{P(H)P(E|H)}{P(H)P(E|H) + P(¬H)P(E|¬H)}",
+    fun = bayes
+  ),
   dm = list(
     name = "Difference Measure",
     formula = "d(H, E) = p(H|E) - p(H)",
-    fun = function(h1, eh, enh, ...) {
-      he <- bayes(h1, eh, enh)
-      he - h1
+    fun = function(h, detectability, theoretical_risk, ...) {
+      forbid_additional_args(...)
+      he <- bayes(h, detectability, theoretical_risk)
+      he - h
     }
   ),
   rm = list(
     name = "Log-Ratio Measure",
     formula = "r(H, E) = log(\\frac{p(H|E)}{p(H)})",
-    fun = function(h1, eh, enh, ...) {
-      he <- bayes(h1, eh, enh)
-      log(he / h1)
+    fun = function(h, detectability, theoretical_risk, ...) {
+      forbid_additional_args(...)
+      he <- bayes(h, detectability, theoretical_risk)
+      log(he / h)
     }
   ),
   lm = list(
     name = "Log-Likelihood Measure",
     formula = "l(H, E) = log(\\frac{p(H|E)}{p(E|\\neg{}H)})",
-    fun = function(h1, eh, enh, ...) {
-      he <- bayes(h1, eh, enh)
+    fun = function(h, detectability, theoretical_risk, ...) {
+      forbid_additional_args(...)
+      he <- bayes(h, detectability, theoretical_risk)
+      enh <- 1 - theoretical_risk
       log(he / enh)
     }
   ),
   km = list(
     name = "Kemeny–Oppenheim Measure",
     formula = "k(H, E) = \\frac{p(E|H) - p(E|\\neg{}H)}{p(E|H) + p(E|\\neg{}H)}",
-    fun = function(h1, eh, enh, ...) {
+    fun = function(h, detectability, theoretical_risk, ...) {
+      forbid_additional_args(...)
+      eh <- detectability
+      enh <- 1 - theoretical_risk
       (eh - enh) / (eh + enh)
     }
   ),
@@ -363,52 +343,75 @@ measures <- list(
   \\frac{p(E|H) - p(H)}{1 - p(H)}, & \\text{if } p(H|E) \\geq{} p(H) \\\\
   \\frac{p(E|H) - p(H)}{p(H)}, & \\text{if } p(H|E) < p(H)
 \\end{cases}",
-fun = function(h1, eh, enh, ...) {
-  he <- bayes(h1, eh, enh)
-  ifelse(he >= h1, (he - h1)/(1 - h1), (he - h1)/h1)
-}
+    fun = function(h, detectability, theoretical_risk, ...) {
+      forbid_additional_args(...)
+      he <- bayes(h, detectability, theoretical_risk)
+      ifelse(he >= h, (he - h) / (1 - h), (he - h) / h)
+    }
   ),
-sm = list(
-  name = "Christensen–Joyce Measure",
-  formula = "s(H, E) = p(H|E) - p(H|\\neg{}E)",
-  fun = function(h1, eh, enh, ...) {
-    he <- bayes(h1, eh, enh)
-    e <- h1 * eh + (1 - h1) * enh
-    hne <- (h1 * (1 - eh)) / (1 - e)
-    he - hne
-  }
-),
-cpm = list(
-  name = "Carnap’s Relevance Measure",
-  formula = "c'(H, E) = p(E)(p(H|E) - p(H))",
-  fun = function(h1, eh, enh, ...) {
-    he <- bayes(h1, eh, enh)
-    e <- h1 * eh + (1 - h1) * enh
-    e * (he - h1)
-  }
-),
-rpm = list(
-  name = "Rips Measure",
-  formula = "r'(H, E) = 1 - \\frac{p(\\neg{}H|E)}{p(\\neg{}H)}",
-  fun = function(h1, eh, enh, ...) {
-    he <- bayes(h1, eh, enh)
-    1 - (1 - he) / (1 - h1)
-  }
-)
+  sm = list(
+    name = "Christensen–Joyce Measure",
+    formula = "s(H, E) = p(H|E) - p(H|\\neg{}E)",
+    fun = function(h, detectability, theoretical_risk, ...) {
+      forbid_additional_args(...)
+      he <- bayes(h, detectability, theoretical_risk)
+      enh <- 1 - theoretical_risk
+      eh <- detectability
+      e <- h * eh + (1 - h) * enh
+      hne <- (h * (1 - eh)) / (1 - e)
+      he - hne
+    }
+  ),
+  cpm = list(
+    name = "Carnap’s Relevance Measure",
+    formula = "c'(H, E) = p(E)(p(H|E) - p(H))",
+    fun = function(h, detectability, theoretical_risk, ...) {
+      forbid_additional_args(...)
+      he <- bayes(h, detectability, theoretical_risk)
+      enh <- 1 - theoretical_risk
+      e <- h * detectability + (1 - h) * enh
+      e * (he - h)
+    }
+  ),
+  rpm = list(
+    name = "Rips Measure",
+    formula = "r'(H, E) = 1 - \\frac{p(\\neg{}H|E)}{p(\\neg{}H)}",
+    fun = function(h, detectability, theoretical_risk, ...) {
+      forbid_additional_args(...)
+      he <- bayes(h, detectability, theoretical_risk)
+      1 - (1 - he) / (1 - h)
+    }
+  )
 )
 
 measures <- tibble(!!!transpose(measures)) %>% 
   mutate(name = simplify(name, "chr"),
          formula = simplify(formula, "chr"))
 
-uncertainly <- function(fun, n = 1e5, seed = NULL){
-  function(h1, eh, enh){
+#' Integrate over uncertain theoretical risk
+#' 
+#' If theorethical risk is maximally uncertain, we represent this uncertainty
+#' as a uniform distribution from zero to tau from which we sample and average the measures.
+#'
+#' @param tau The guaranteed upper bound of theoretical risk.
+#' @param n Number of samples from the uniform distribution.
+#' @param seed Optional seed to set before execution. Is reset to global state on exit.
+#' @return A function similar to the original
+uncertainly <- function(measure, tau, n = 1e5, seed = NULL){
+  function(h, detectability, ...){
+    forbid_additional_args(...)
     if(!is.null(seed)){
       if(exists(".Random.seed"))on.exit(set.seed(.Random.seed))
       set.seed(seed)
     }
-    enh_samples <- runif(n, enh, 1)
-    mean(fun(h1, eh, enh_samples))
+    theoretical_risk_samples <- runif(n, 0, tau)
+    mean(measure(h, detectability, theoretical_risk_samples))
+  }
+}
+certainly <- function(measure, tau){
+  function(h, detectability, ...){
+    forbid_additional_args(...)
+    measure(h, detectability, tau)
   }
 }
 ```
@@ -416,15 +419,24 @@ uncertainly <- function(fun, n = 1e5, seed = NULL){
 ```{r, cache=TRUE, echo=FALSE}
 step <- 0.01
 
-grid <- tidyr::expand_grid(
-    h1 = .1,
-    eh = .8,
-    enh = seq(step, 1 - step, step)
+grid <-
+  tidyr::expand_grid(
+    h = .1,
+    detectability = .8,
+    tau = seq(step, 1 - step, step)
   )
-apply_on_grid <- function(f, grid) {
+apply_on_grid <- function(f, grid, seed = NULL, n = 1e4) {
+  certain <- function(h, detectability, tau, ...){
+    forbid_additional_args(...)
+    certainly(f, tau)(h, detectability)
+  }
+  uncertain <- function(h, detectability, tau, ...){
+    forbid_additional_args(...)
+    uncertainly(f, tau, seed = seed, n = n)(h, detectability)
+  }
   mutate(grid,
-         certain = pmap_dbl(grid, f),
-         uncertain = pmap_dbl(grid, uncertainly(f, seed = .Random.seed)))
+         certain = pmap_dbl(grid, certain),
+         uncertain = pmap_dbl(grid, uncertain))
 }
 
 results <- mutate(measures, results = map(fun, apply_on_grid, grid)) %>% 
@@ -435,21 +447,41 @@ results <- mutate(measures, results = map(fun, apply_on_grid, grid)) %>%
                values_to = "value")
 ```
 
-```{r, dev = "tikz", cache=TRUE, warning=FALSE}
-#| fig.cap: "Several measures for corroboration as increase in firmness as a function of α, where α is either certain (solid line) or maximally uncertain (dotted line)."
-
-results %>%
+```{r, cache = TRUE}
+plots <- results %>%
   mutate(name = str_remove(name, "Measure")) %>%
   split(., .$name) %>%
   imap(
-    ~ ggplot(.x, aes(enh, value)) +
-      geom_line(aes(linetype = certainty)) +
-      labs(
-        title = .x$name,
-        y = element_blank(),
-        x = element_blank()
-      )
-  ) %>%
+    ~ ggplot() +
+      geom_line(aes(tau, value, linetype = certainty), data = .x) +
+      labs(title = .y,
+           y = element_blank(),
+           x = "$\\tau$") +
+      geom_ribbon(
+        data = pivot_wider(.x, names_from = certainty, values_from = value),
+        aes(x = tau, ymin = uncertain, ymax = certain),
+        alpha = .1
+      ) +
+      theme_tufte() +
+      NULL
+  )
+```
+
+
+```{r, dev = "tikz", cache=TRUE, warning=FALSE}
+#| fig.cap: "Posterior (corroboration as firmness) as a function of τ, where τ is either certain (solid line) or maximally uncertain (dotted line)."
+
+plots[["Posterior"]] +
+  labs(caption = "$p(E|H) = .8$, $p(H) = .1$",
+       y = "$\\mathbb{E}\\big(p(H|E)\\big)$") +
+  theme(legend.position = c(.2, .8),
+        legend.title = element_blank())
+```
+
+```{r, dev = "tikz", cache=TRUE, warning=FALSE}
+#| fig.cap: "Several measures for corroboration as increase in firmness as a function of τ, where τ is either certain (solid line) or maximally uncertain (dotted line)."
+
+plots[!(names(plots) %in% "Posterior")] %>% 
   reduce(`+`) +
   plot_layout(ncol = 2, guides = 'collect') &
   theme_tufte() &
@@ -460,6 +492,7 @@ results %>%
     axis.text = element_text(size = 6)
   )
 ```
+
 
 Neither absolute certainty nor uncertainty are realistic scenarios but represent the boundary conditions that all realistic conditions fall in.
 Depending on the distribution that expresses our state of knowledge about the theoretical risk a study took on, our expectation for what to gain varies considerably.
